--- a/LabWebAppBlazor/Components/Layout/MainLayout.razor
+++ b/LabWebAppBlazor/Components/Layout/MainLayout.razor
@@ -35,6 +35,8 @@
     <script src="resulado.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+
 
 </HeadContent>
 
