--- a/LabWebAppBlazor/Components/Layout/NavMenu.razor
+++ b/LabWebAppBlazor/Components/Layout/NavMenu.razor
@@ -40,7 +40,13 @@
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="examenes" Match="NavLinkMatch.All">
-                <span class="bi bi-list-nested-nav-menu oi oi-people" aria-hidden="true"></span> Exámenes
+                <span class="bi bi-list-nested-nav-menu oi oi-people" aria-hidden="true"></span> Examenes
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="asociaciones-reactivos" Match="NavLinkMatch.All">
+                <span class="bi bi-list-nested-nav-menu oi oi-people" aria-hidden="true"></span> Examen - Reactivo
             </NavLink>
         </div>
 
